# relayer-core

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.devssh  Kafka Resilience.md  LICENSE  LOGGING_GUIDE.md  MONITORING_GUIDE.md  README.md  SNAPSHOT_RELOAD_DOCS.md  ZKOS_TRANSACTION_RPC_ENDPOINT.txt  docker-compose.monitoring.yaml  docker-compose.yaml  foo.txt  relayerprogram.json  setup-monitoring.sh  transaction.txt  zkos_create_order.txt  zkos_create_order_file_bin.txt
.github/workflows/: benchmark.yml  release.yml  rust.yml
Kafka-cluster/: docker-compose.yml
Postman Requests/: Postman Requests.postman_collection.json  Twilight Relayer Postman Requests.postman_collection.json
aeron/: setup-docker.sh
aeron-rs/src/: context.rs  lib.rs
benches/: bench.md  db_benchmarks.rs  load_test.rs  main.rs  relayer_benchmarks.rs  relayer_core.rs  zkos_benchmarks.rs
benches/helper/: mod.rs
docker-aeron/: Dockerfile
docs/: lend_order.md  order_flow_reference.md  risk_engine.md  trader_order.md
jMeter/: newOrder.jmx  newOrderLocal.jmx
jmeter/: newOrderLocal.jmx
logs/: relayer-database.log.2025-06-30  relayer-heartbeat.log.2025-06-30  relayer-price.log.2025-06-30
monitoring/grafana/dashboards/: twilight-relayer-dashboard.json
monitoring/loki/: loki.yml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail.yml
nginx/: default.conf
nginx/conf/: default.conf
postman-requests/: Twilight RelayerAPI HMAC.postman_collection.json
querykafkapsql/: Cargo.toml  Dockerfile  Dockerfile.dev
querykafkapsql/src/: config.rs  lib.rs  main.rs
querykafkapsql/src/query/: kafka_psql_sink.rs  mod.rs
querykafkapsql/src/relayer/: mod.rs  postgres_sql_init.rs  traderorder.rs
redis/: Dockerfile  redis.conf
redis/config/: redis.conf
redis/data/: backup.db  crontab  dump.rdb  root  root2
relayer/: Dockerfile
relayerapi-docker/: .env  Dockerfile.api  Dockerfile.apidirect  Dockerfile.archiver  Dockerfile.archiverdirect  Dockerfilegit.api
rpckafka/: .env  Cargo.toml  Dockerfile
rpckafka/src/: main.rs
rpckafka/src/kafkalib/: kafkacmd.rs
rpckafka/src/relayer/: commands.rs  mod.rs  rpc_cmd.rs  rpc_types.rs  rpc_types_with_zkos.rs  traderorder.rs
rpckafka/src/relayer/rpc_api_kafka/: api.rs  api_with_zkos.rs  mod.rs  rpc_cmd.rs
sqlscript/: questdb.sql  table.sql
src/: config.rs  error.rs  lib.rs  logging.rs  logging_examples.rs  main copy.rs  main.rs  metrics.rs  ordertest.rs
src/aeronlib/: aeronqueue.rs  mod.rs  publisher_aeron.rs  subscriber_aeron.rs  types.rs
src/aeronlibmpsc/: aeronqueue.rs  publisher_aeron.rs  subscriber_aeron.rs  types.rs
src/db/: client_request_manage.rs  events.rs  lendpool.rs  localdb.rs  mod.rs  queue_manager.rs  relayer_db.rs  relayer_state_relaod.rs  relayerdb_old_generic.rs  snapshot_and_reload.rs  sortedset.rs
src/db/snapshot_and_reload/: codec.rs  current.rs  legacy.rs  mod.rs  orchestration.rs
src/kafkalib/: consumer_kafka.rs  kafka_health.rs  kafka_topic.rs  kafkacmd.rs  mod.rs  persistent_queue.rs  producer_kafka.rs
src/perpetual/: interface.rs  mod.rs
src/postgresqllib/: mod.rs  psql_sink.rs
src/pricefeederlib/: btc_price_feeder.rs  mod.rs  price_feeder.rs
src/query/: kafka_psql_sink.rs
src/questdb/: mod.rs  questdb.rs
src/rabitmqlib/: consumer_rabbit.rs  mod.rs
src/redislib/: mod.rs  redis_batch.rs  redis_db.rs  redis_db_orderbook.rs  redis_pipeline.rs  redisdb_orderinsert.rs
src/redislib/backup/: dump.rdb
src/redislib/config/: redis.conf
src/relayer/: api.rs  commands.rs  cronjobs.rs  customeraccount.rs  exchange.rs  exchangempsc.rs  fundingupdate.rs  heartbeat.rs  init.rs  init_lend_state_output.rs  lendorder.rs  mod.rs  postgres_sql_init.rs  pricetickerupdate.rs  queueresolver.rs  relayer_cmd.rs  relayer_events.rs  relayercore.rs  risk_engine.rs  rpc_cmd.rs  rpc_types.rs  threadpool.rs  traderorder.rs  types.rs  utils.rs
src/relayer/admin_api/: api.rs  mod.rs
src/relayer/api/: api.rs  types.rs
src/relayer/core/: core_config.rs  mod.rs  order_handler.rs  relayer_command_handler.rs  state_tx.rs  zkos_handler.rs
src/relayer/directapi/: api.rs  mod.rs  types.rs  zkos_query.rs
src/relayer/directapi_repl/: api_repl.rs  mod.rs
src/relayer/perpetual/: longorder_insert.rs  mod.rs  order_insert.rs  query.rs
src/relayer/privateapifunctions/: types.rs
src/relayer/publicapi/: candledata.rs  checkservertime.rs  mod.rs  orderbook.rs  recentorder.rs
src/relayer/rpc_api_kafka/: api.rs  mod.rs  rpc_cmd.rs  types.rs
tests/: integration_test.rs  lendorder_test.rs  rpc_test.rs  td_metex_test.rs  td_mutex_test.rs  traderorder_test.rs  unit_test.rs
tpf/: .env  .gitignore  Cargo.toml  README.md  docker-compose.yaml
tpf/sqlscript/: table.sql
tpf/src/: config.rs  lib.rs  main.rs  utils.rs
tpf/src/kafkalib/: kafka_topic.rs  mod.rs  producer_kafka.rs
tpf/src/pricefeederlib/: btc_price_feeder.rs  price_feeder.rs
tpf/src/rabitmqlib/: producer_rabbit.rs
tpf/src/redislib/: dump.rdb  mod.rs  redis_db.rs
tpf/src/redislib/config/: redis.conf
