[package]
name = "twilight-relayer-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.131"
serde_derive = "1.0.131"
serde_json = "1.0.68"
# uuid = "0.8.2"  #https://crates.io/crates/uuid
uuid = { version = "0.8.2", features = ["v4", "serde"] } #https://github.com/serde-rs/serde/issues/324
stopwatch = "0.0.7"

# tpf
dotenv = "0.15.0"
redis = { version = "0.19.0", features = ["tls"] }
# tokio = "0.1.21"
tokionew = { package = "tokio", version = "0.1.21" }
tokio = { package = "tokio", version = "0.2.4", features = ["full"] }
websocket = "0.24.0"
serde_with = { version = "1.4.0", features = ["json"]}
futures  = "0.1.31"
kafka = "0.8"
amiquip = "0.4.0"
postgres = "0.19.2"
lazy_static = "1.4.0"
r2d2 = "0.8.9"
r2d2_postgres = "0.18.1"
r2d2_redis = "0.14.0"
parking_lot = ">= 0.10, < 0.12"
clokwerk = "0.3.5"
chrono = "0.4"
jsonrpc = "0.12.1"
jsonrpc-http-server = "18.0"
jsonrpc-core = "18.0.0"
ctrlc = "3.1"
nix = "0.17"

# aeron-rs = "0.1.5"
# dashmap = "5.1.0"  // use dashmap::DashMap;
# [dependencies.tpf]
# path = "./tpf"

pretty_env_logger = "0.4"

strum = "0.24"
strum_macros = "0.24"

rust_decimal =  { version = "1.23", features = ["db-postgres"]}

rust_decimal_macros = "1.23"

# yata = "0.6.1"
questdb = "0.1.3"

[dependencies.aeron-rs]
path = "./aeron-rs"
