[package]
name = "twilight-relayer-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
serde = "1.0.131"
serde_derive = "1.0.131"
serde_json = "1.0.68"
# uuid = { version = "0.8.2", features = ["v4", "serde"] } #https://github.com/serde-rs/serde/issues/324
uuid = { version = "1.6.1", features = ["v4", "serde"] }
stopwatch = "0.0.7"
dotenv = "0.15.0"
redis = { version = "0.24.0", features = ["tls"] }
tokionew = { package = "tokio", version = "0.1.21" }
tokio = { package = "tokio", version = "0.2.4", features = ["full"] }
websocket = "0.24.0"
serde_with = { version = "1.4.0", features = ["json"] }
futures = "0.1.31"
kafka = "0.8"
amiquip = "0.4.0"
# postgres = "0.19.2"
postgres = { version = "0.19.2", features = ["with-serde_json-1"] }
postgres-types = { version = "0.1.0", features = [
    "derive",
    "with-serde_json-1",
] }
lazy_static = "1.4.0"
r2d2 = "0.8.9"
r2d2_postgres = "0.18.1"
r2d2_redis = "0.14.0"
parking_lot = ">= 0.10, < 0.12"
clokwerk = "0.3.5"
chrono = "0.4"
jsonrpc = "0.12.1"
jsonrpc-http-server = "18.0"
jsonrpc-core = "18.0.0"
ctrlc = "3.1"
nix = "0.17"
# aeron-rs = "0.1.5"
# dashmap = "5.1.0"  // use dashmap::DashMap;
# [dependencies.tpf]
# path = "./tpf"
bincode = "1.3.3"
pretty_env_logger = "0.4"
strum = "0.24"
strum_macros = "0.24"
rust_decimal = { version = "1.23", features = ["db-postgres"] }
rust_decimal_macros = "1.23"
hex = "*"
# cqrs-es = "0.4.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
datasize = "0.2.10"
rand = "0.7"
crossbeam-channel = "0.5.6"


# Compatible with tokio 0.2.x with TLS support
tokio-tungstenite = { version = "0.10", features = ["native-tls", "tls"] }
futures-util = "0.3"
tracing = "0.1"

# [dependencies.transaction]
# path = "../ZkOS/transaction"
# [dependencies.transactionapi]
# path = "../ZkOS/transactionapi"
# [dependencies.quisquis-rust]
# path = "../quisquis-rust"
# [dependencies.zkvm]
# path = "../ZkOS/zkvm"
# [dependencies.utxo-in-memory]
# path = "../ZkOS/utxo-in-memory"
# [dependencies.zkschnorr]
# path = "../ZkSchnorr"
# [dependencies.address]
# path = "../ZkOS/address"
# [dependencies.zkos-relayer-wallet]
# path = "../zkos-relayer-wallet"

curve25519-dalek = { version = "3", default-features = false }


[dependencies.zkos-relayer-wallet]
git = "ssh://github.com/twilight-project/zkos-relayer-wallet.git"
branch = "develop-rust"

[dependencies.zkvm]
git = "ssh://github.com/twilight-project/zkos-rust.git"
branch = "updated-rpc"

[dependencies.transaction]
git = "ssh://github.com/twilight-project/zkos-rust.git"
branch = "updated-rpc"

[dependencies.transactionapi]
git = "ssh://github.com/twilight-project/zkos-rust.git"
branch = "updated-rpc"

[dependencies.address]
git = "ssh://github.com/twilight-project/zkos-rust.git"
branch = "updated-rpc"

[dependencies.utxo-in-memory]
git = "ssh://github.com/twilight-project/zkos-rust.git"
branch = "updated-rpc"

[dependencies.zkschnorr]
git = "ssh://github.com/twilight-project/zk-schnorr.git"

[dependencies.quisquis-rust]
git = "ssh://github.com/twilight-project/quisquis-rust.git"
branch = "develop"
