[package]
name = "relayer-core"
version = "0.2.0"
edition = "2021"
authors = ["Twilight Project"]
description = "A high-performance matching engine written in Rust using Event Sourcing pattern with CQRS framework to handle tens of thousands of orders per second"
license = "Apache-2.0"
repository = "https://github.com/twilight-project/relayer-core"
readme = "README.md"
keywords = [
    "relayer",
    "matching-engine",
    "cqrs",
    "event-sourcing",
    "twilight",
    "trading",
    "orders",
]
categories = ["algorithms", "database", "web-programming", "asynchronous"]

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
serde = "1.0.131"
serde_derive = "1.0.131"
serde_json = "1.0.68"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
stopwatch = "0.0.7"
dotenv = "0.15.0"
tokio = { package = "tokio", version = "0.2.4", features = ["full"] }
serde_with = { version = "1.4.0", features = ["json"] }
kafka = "0.8"
lazy_static = "1.4.0"
clokwerk = "0.3.5"
chrono = "0.4"
jsonrpc = "0.12.1"
jsonrpc-http-server = "18.0"
jsonrpc-core = "18.0.0"
bincode = "1.3.3"
hex = "*"
datasize = "0.2.10"
rand = "0.7"
crossbeam-channel = "0.5.6"
tokio-tungstenite = { version = "0.10", features = ["native-tls", "tls"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
log = "0.4"


curve25519-dalek = { version = "3", default-features = false }


[dependencies.twilight-relayer-sdk]
git = "https://github.com/twilight-project/twilight-relayer-sdk.git"
tag = "v0.1.1"

[dependencies.nyks-wallet]
git = "https://github.com/twilight-project/nyks-wallet.git"
tag = "v0.1.1"

[profile.dev]
strip = "debuginfo"
