[package]
name = "tpf"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
redis = { version = "0.19.0", features = ["tls"] }
tokio = "0.1.21"
websocket = "0.24.0"
serde_json = "1.0.68"
serde = "1.0.131"
# serde_with = "1.2.0"
serde_with = { version = "1.4.0", features = ["json"]}
serde_derive = "1.0.131"
futures  = "0.1.31"
kafka = "0.8"
amiquip = "0.4.0"
postgres = "0.19.2"
lazy_static = "1.4.0"
stopwatch = "0.0.7"
r2d2 = "0.8.9"
r2d2_postgres = "0.18.1"
r2d2_redis = "0.14.0"
# postgres-types = "0.1.2"
[dev-dependencies]